[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/time_wizard_minigame.gd" id="1_time_wizard_minigame"]

[node name="TimeWizardMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_time_wizard_minigame")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time Wizard Minigame (Minesweeper)"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time Remaining: 10.0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="CompletionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Board Completion: 0.0% (0/16)"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click squares to reveal them"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 4

[node name="ActivateEventButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Activate Event"
disabled = true

